docs: concluída documentação sobre media queries e responsividade

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .vermelha {background-color: #f95151;}
-.verde {background-color: #a5e0a8;}
+.verde {background-color: #b0e9b3;}
 .azul {background-color: #1488ca;}
 .amarela {background-color: #f8ab08;}
 .roxa {background-color: #8b44ac;}
